# Traefik-Playground

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Makefile  README.md  doc_generator.py  docker-compose-traefik.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
app/: __init__.py  config.py  containers.py  db.py  exceptions.py  middleware.py  models.py  responses.py  security.py  utils.py
app/repositories/: __init__.py  base.py  user.py
app/routers/: __init__.py  auth.py  health.py  user.py  ws.py
app/schemas/: __init__.py  auth.py  generic.py  log.py  user.py
app/services/: __init__.py  auth.py  log.py  user.py  ws.py
env/: .drone.env
migrations/models/: 0_20220801091200_init.sql
pre_start/: check_connection.py  create_init_data.py
script/: service_entrypoint.sh
tests/: conftest.py  create_test_init_data.py  fake_data.py
tests/routers/: test_health.py
tests/routers/auth/: test_auth_jwt.py
traefik/: traefik.yaml
traefik/config.d/: dynamic_conf.yml
